# traffic-control-system

./: .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  README.md  input.json  package-lock.json  package.json  simulate.py
.cache/clangd/index/: io.c.2E789A0713D74E41.idx  io.h.3B6BE9C9184E4563.idx  main.c.CFA78D3CE0C7C96B.idx
.github/workflows/: build-and-test.yaml  run-tests.yaml
sim/: generateExpected.ts  input.json  package.json  tsconfig.json
sim/src/: io.test.ts  io.ts  log.ts  main.ts  metrics.ts  queue.test.ts  queue.ts  sim.integration.test.ts  sim.test.ts  sim.ts  strategy.ts
sim/testdata/: config.json
sim/testdata/basic/: expected.json  input.json
sim/testdata/left_turns/: expected.json  input.json
sim/testdata/long/: expected.json  input.json
sim/testdata/maximum/: expected.json
sim/testdata/maximum_throughput/: config.json  input.json
sim/testdata/nonuniform/: expected.json  input.json
sim/testdata/realtime/: expected.json  input.json
sim/testdata/realtime2/: expected.json  input.json
sim/testdata/uniform/: expected.json  input.json
sim/testdata/uniform_throughput/: expected.json
src/: index.ts  io.c  io.h  io.ts  main.c  queue.c  queue.h  queue.ts  sim.c  sim.h  sim.ts  types.ts
web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: hooks.ts  main.tsx  styles.css  types.ts
web/src/components/: App.tsx  Controls.tsx  Display.tsx
